# Freeghost

./: Cargo.toml  LICENSE_additions  README.md  dev.MD  dev_setup.sh  project_log.md
benches/: crypto_bench.rs  identity_bench.rs  storage_benchmarks.rs
config/: default.toml
docs/: Roadmap 2.11A.MD  Roadmap.md  Roadmap1.5.1.md  TechReferences.md  Whitepaper.md
src/: lib.rs  main.rs  mod.rs
src/api/: rest.rs  types.rs
src/api/handlers/: identity.rs
src/blockchain/: solana.rs
src/core/crypto/: audit.rs  dilithium.rs  key_manager.rs  kyber.rs  mod.rs  ntt.rs  quantum.rs  sampling.rs  secure_memory.rs  serialization.rs  types.rs  zkp.rs
src/core/crypto/poisoning/: detector.rs
src/core/identity/: biometric.rs  types.rs
src/core/recovery/: mod.rs
src/core/security/permissions/: mod.rs  privacy.rs
src/core/services/: healt.rs  identity.rs  mod.rs  verification.rs
src/network/: circuit_breaker.rs  coordinator.rs  error.rs  fallback.rs  mod.rs  p2p.rs  protocol.rs  tor.rs  types.rs
src/network/health/: mod.rs
src/network/load_balancer/: mod.rs
src/network/p2p/: bandwidth.rs  mod.rs  storage.rs
src/network/protocols/: discovery.rs  fallback.rs  loadbalancer.rs  message_handler.rs  mod.rs  p2p.rs  routing.rs  tor.rs
src/network/state/: mod.rs  sync.rs
src/network/sync/: response.rs  riconciliation.rs  state.rs
src/network/transport/: error.rs  factory.rs  message.rs  mod.rs  quic.rs  tcp.rs  tests.rs  tor.rs  transport.rs  types.rs
src/plugins/: loader.rs  manager.rs  registry.rs  types.rs  versioning.rs
src/plugins/isolation/: manager.rs
src/plugins/official/behavior_analysis/: analyzer.rs
src/plugins/official/face_recognition/: processor.rs
src/plugins/official/quantum_resistant/: crypto.rs
src/plugins/traits/: mod.rs
src/storage/: consensus.rs  encrypted.rs  recovery.rs  types.rs
src/storage/distributed/: consensus.rs  merkle.rs  mod.rs  recovery.rs  replication.rs
src/storage/encrypted/: cipher.rs  errors.rs  mod.rs  store.rs
src/utils/: config.rs  error.rs  metrics.rs  monitoring.rs
tests/common/: mod.rs
tests/integration/: crypto_integration.rs  crypto_tests.rs  identity_tests.rs  network_tests.rs
tests/integration/storage/: encrypted_store_tests.rs
