// Cargo.toml
[package]
name = "secure-identity-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
async-trait = "0.1"
uuid = { version = "1.4", features = ["v4"] }
ring = "0.16"
sha3 = "0.10"
aes-gcm = "0.10"
solana-sdk = "1.17"
libp2p = "0.52"
rocksdb = "0.21"
actix-web = "4.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.4"

