[package]
name = "freeghost"
version = "0.1.0"
edition = "2021"
authors = ["Freeghost Team"]
description = "A secure identity management system with quantum-resistant cryptography"
license = "MIT"

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Web Framework
actix-web = "4.3"
actix-cors = "0.6"
actix-rt = "2.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rocksdb = "0.21"

# Blockchain
solana-sdk = "1.17"

# Cryptography
ring = "0.16"
sha3 = "0.10"
aes-gcm = "0.10"
hex = "0.4"

# Logging and Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Configuration
config = "0.13"
dotenv = "0.15"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
parking_lot = "0.12"

[dev-dependencies]
# Testing
tokio-test = "0.4"
criterion = "0.4"
tempfile = "3.7"
mockall = "0.11"
test-log = "0.2"
async-std = { version = "1.12", features = ["attributes"] }

[features]
default = []
quantum = []  # Enable quantum-resistant algorithms
metrics = []  # Enable metrics collection
backup = []   # Enable backup functionality

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "identity_bench"
harness = false

[[bench]]
name = "storage_benchmarks"
harness = false

[workspace]
members = [
    ".",
    # Add workspace members here as the project grows
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
